# libdvdnav

./: .cvsignore  AUTHORS  ChangeLog  DEVELOPMENT-POLICY.txt  INSTALL  KNOWN-BUGS  Makefile  Makefile.am  NEWS  README  TODO  acconfig.h  autogen.sh  configure.ac  configure.in  configure2  cvscompile.sh  libdvdnav.spec.in  version.sh
debian/: README.Debian  README.debian  bug-presubj  changelog  control  copyright  dvdnav-config.1  libdvdnav-dev.examples  libdvdnav-dev.files  libdvdnav1.docs  libdvdnav1.examples  libdvdnav1.install  rules  shlibs
doc/: Makefile.am  doxy.conf  dvd_structures  library_layout  mainpage.cpp  tutorial.cpp
doc/examples/: minimal.c
examples/: .cvsignore  Makefile.am  menus.c
m4/: Makefile.am  dvdnav.m4
misc/: .cvsignore  Makefile.am  autogen.sh  dvdnav-config.in  dvdnav-config2.sh  relchk.sh.in
msvc/: config.h  ifo_dump.dsp  libdvdcss.dsp  libdvdnav.dsp  libdvdnav.dsw  libwin32utill.dsp  libwin32utils.def  libwin32utils.dsp  play_title.dsp  title_info.dsp
msvc/contrib/pthreads/: ANNOUNCE  CONTRIBUTORS  ChangeLog  FAQ  Makefile  Nmakefile.tests  README  exit.c  pthread.def  pthread.dsp  pthread.ncb  pthread.opt
msvc/include/: dvdnav_internal.h
msvc/scripts/: libdvdnav_install.bat
src/: .cvsignore  Makefile.am  bswap.h  decoder.c  decoder.h  dvd_input.c  dvd_reader.c  dvd_reader.h  dvd_types.h  dvd_udf.c  dvdnav.c  dvdnav.h  dvdnav_events.h  dvdnav_internal.h  dvdnav_internal.h.in  highlight.c  ifo_print.c  ifo_print.h  ifo_read.c  ifo_types.h  nav_read.c  nav_types.h  nav_types.patch  navigation.c  read_cache.c  read_cache.h  remap.c  remap.h  searching.c  settings.c  vm.c  vm.h  vmcmd.c  vmcmd.h
src/dvdnav/: dvd_types.h  dvdnav.h  dvdnav_events.h
src/dvdread/: Makefile.am  bitreader.c  bswap.h  dlfcn.c  dvd_input.c  dvd_reader.c  dvd_udf.c  ifo_print.c  ifo_print.h  ifo_read.c  ifo_types.h  nav_read.c
src/libdvdread/: Makefile.am  dvd_reader.c  ifo_print.h
src/vm/: decoder.c  decoder.h  vm.c  vm.h  vmcmd.c  vmcmd.h
