EXTRA_DIST = dvdnav-config.in libdvdnav.spec.in libdvdnav.spec

bin_SCRIPTS = dvdnav-config

debug:
install-debug: install

mostlyclean-generic:
	-rm -f *~ \#* .*~ .\#*

maintainer-clean-generic:
	-@echo "This command is intended for maintainers to use;"
	-@echo "it deletes files that may require special tools to rebuild."
	-rm -f Makefile.in
